--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>Aqui falamos das peculiaridades do nosso grande pequeno amigo!</p>
     </header>
     <div class="content">
-        <img src="C:\Users\Andre Farina\Documents\Site Tutu\Tutu.png" alt="Foto de Tutuzinho" class="profile-image">
+        <img src="tutusite.github.com/Tutu.png" alt="Foto de Tutuzinho" class="profile-image">
         <p class="description">
             Tutuzinho é um cara incrível e super divertido. Dizem que ele é conhecido pelas suas histórias épicas, 
             mas o que mais chama atenção é sua peculiaridade anatômica: Sua piroca defeituosa, tortona pra esquerda de 8CM, um verdadeiro símbolo de originalidade!
